--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
         <div id="calendario">
             <!-- Repite esta estructura para cada hora del día -->
             <div class="hora">
-                <div class="tiempo"></div>
+                <div class="tiempo">Horas</div>
                 <div class="tiempo">Lunes</div>
                 <div class="tiempo">Martes</div>
                 <div class="tiempo">Miércoles</div>
                 <div class="tiempo">Jueves</div>
                 <div class="tiempo">Viernes</div>
+                <div class="tiempo">Sabado</div>
             </div>
             <div class="hora">
-                <div class="tiempo">9 AM</div>
+                <div class="tiempo">8 - 9</div>
                 <div class="dia dia-false"></div>
+                <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -38,16 +40,8 @@
             </div>
             <!-- Repite esto para cada hora hasta las 21:00 -->
             <div class="hora">
-                <div class="tiempo">10 AM</div>
+                <div class="tiempo">9 - 10</div>
                 <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-            </div>
-            <!-- ... -->
-            <div class="hora">
-                <div class="tiempo">11 AM</div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -56,16 +50,8 @@
             </div>
             <!-- ... -->
             <div class="hora">
-                <div class="tiempo">12 PM</div>
+                <div class="tiempo">10 - 11</div>
                 <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-            </div>
-            <!-- ... -->
-            <div class="hora">
-                <div class="tiempo">1 PM</div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -74,16 +60,8 @@
             </div>
             <!-- ... -->
             <div class="hora">
-                <div class="tiempo">2 PM</div>
+                <div class="tiempo">11 - 12</div>
                 <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-            </div>
-            <!-- ... -->
-            <div class="hora">
-                <div class="tiempo">3 PM</div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -92,16 +70,8 @@
             </div>
             <!-- ... -->
             <div class="hora">
-                <div class="tiempo">4 PM</div>
+                <div class="tiempo">12 - 13</div>
                 <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-            </div>
-            <!-- ... -->
-            <div class="hora">
-                <div class="tiempo">5 PM</div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -110,16 +80,8 @@
             </div>
             <!-- ... -->
             <div class="hora">
-                <div class="tiempo">6 PM</div>
+                <div class="tiempo">13 - 14</div>
                 <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-                <div class="dia"></div>
-            </div>
-            <!-- ... -->
-            <div class="hora">
-                <div class="tiempo">7 PM</div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -128,7 +90,8 @@
             </div>
             <!-- ... -->
             <div class="hora">
-                <div class="tiempo">8 PM</div>
+                <div class="tiempo">14 - 15</div>
+                <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
@@ -137,7 +100,58 @@
             </div>
             <!-- ... -->
             <div class="hora">
-                <div class="tiempo">9 PM</div>
+                <div class="tiempo">16 - 17</div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+            </div>
+            <!-- ... -->
+            <div class="hora">
+                <div class="tiempo">17 - 18</div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+            </div>
+            <!-- ... -->
+            <div class="hora">
+                <div class="tiempo">18 - 19</div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+            </div>
+            <!-- ... -->
+            <div class="hora">
+                <div class="tiempo">19 - 20</div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+            </div>
+            <!-- ... -->
+            <div class="hora">
+                <div class="tiempo">20 - 21</div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+                <div class="dia"></div>
+            </div>
+            <!-- ... -->
+            <div class="hora">
+                <div class="tiempo">21 - 22</div>
+                <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
                 <div class="dia"></div>
